Version 2.02.68 -
===============================
  Fix exit code when requesting help using documented -o help option.
  Do not use internal DLM lock definitions in generic LVM2 clvmd code.
  Add dmeventd man page.
  Update lvresize/extend/reduce manpages with --nofsck, --resizefs options.
  Fix lvm2cmd example in documentation.
  Allow use of lvm2app and lvm2cmd headers in C++ mode.
  Fix wrong lvm path creation from configure introduced in previous release.
  Fix segfault in clvmd -R if no response from daemon received.

Version 2.02.67 - 4th June 2010
===============================
  Handle failed restart of clvmd using -S switch properly.
  Fix clvmd initscript restart command to start clvmd if not yet running.
  Use built-in absolute paths in clvmd (clvmd restart and PV and LV queries).
  Require partial option in lvchange --refresh for partial LVs.
  Do not fail lvm_init() if init_logging() or _init_rand() generates an errno.
  Don't merge unchanged persistent cache file before dumping if tool scanned.
  Fix incorrect memory pool deallocation while using vg_read for files.
  Add --type parameter description to the lvcreate man page.
  Replace strncmp kernel version number checks with proper ones.
  Avoid selecting names under /dev/block if there is an alternative.
  Update clustered log kernel module name to log-userspace for 2.6.31 onwards.
  Add replicators' LVs to dtree for activation.
  Supress activation message if there is a missing replicator VG.
  Fix scripts/relpath.awk to work in mawk
  Extend lock_vol to check for missing replicator VGs first.
  Update _process_one_vg and process_each_lv_in_vg to populate cmd_vg.
  Add cmd_vg structure and associated functions for replicator.
  Extend _lv_each_dependency() to handle replicator dependencies.
  Add check_replicator_segment() to catch internal replicator errors.
  Initial support for replicator metadata.
  Extend process_each_lv_in_vg() to provide list of failed lvnames.