@@ -1,0 +1,14 @@
+.TH "LVMSADC" "8" "LVM TOOLS #VERSION#" "Red Hat, Inc" "\""
+
+.SH "NAME"
+lvmsadc \- LVM system activity data collector
+
+.SH "SYNOPSIS"
+.B lvmsadc
+
+.SH "DESCRIPTION"
+.B lvmsadc
+is not currently supported under LVM2.
+
+.SH "SEE ALSO"
+.BR lvm (8)
